# LeggedControl_ws-MultRobot

./: .gitignore  CLAUDE.md  Dockerfile  ROS_Control_Notes.md  cbf_notes.md  docker_exec.sh  multi_robot_final_notes.md  run_container.sh  source.sh
.claude/: settings.local.json
src/legged_control/legged_common/scripts/: generate_urdf.sh
src/legged_control/legged_controllers/: CMakeLists.txt  package.xml
src/legged_control/legged_controllers/launch/: fleet_bringup.launch  formation_two_order_cbf_debug.launch  formation_uqp_debug.launch  load_controller_multi.launch
src/legged_control/legged_controllers/scripts/: Cbf_params_twoOrderCBF.yaml  Cbf_params_uqp.yaml  Formation_manager_unified_qp.py  Formation_manager_unified_twoOrderCBF.py  cbf_params.yaml  control_all_same.py  demo_formation_sequence.sh  fleet_manager.py  formation_debug_visualizer.py  formation_manager.py  gait_broadcaster.py  (+2 more)
src/legged_control/legged_upper_control_pkg/: CMakeLists.txt  package.xml  setup.py
src/legged_control/legged_upper_control_pkg/config/: Cbf_params_twoOrderCBF.yaml
src/legged_control/legged_upper_control_pkg/launch/: formation_hocbf.launch
src/legged_control/legged_upper_control_pkg/legged_upper_control/controllers/: accel_hocbf.py  base.py  velocity_qp.py
src/legged_control/legged_upper_control_pkg/legged_upper_control/core/: config.py  formation.py  geometry.py  io.py  navigation.py  planning.py  state.py
src/legged_control/legged_upper_control_pkg/legged_upper_control/fleet/: manager.py
src/legged_control/legged_upper_control_pkg/scripts/: fleet_manager_node.py
(+30 files in other folders)
