<?xml version="1.0"?>
<package format="2">
  <name>legged_upper_control</name>
  <version>0.1.0</version>
  <description>
    Multi-robot formation upper-layer control: Laplacian formation +
    HOCBF-QP safety filter + per-dog A* navigation.
  </description>

  <maintainer email="tony@todo.todo">Tony</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- Python deps (pip-installed, declared for documentation) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package>
